protocols/tests/identities/identity_d2/two_different_assignments_error.out
error: Thread 0 (`multiple_assign`) attempted conflicting assignment to 'a': current=2, new=1
   ┌─ identities/identity_d2/identity_d2.prot:12:3
   │
12 │   DUT.a := a;
   │   ^^^^^^^^^^^ Thread 0 (`multiple_assign`) attempted conflicting assignment to 'a': current=2, new=1

error: Thread 1 (`multiple_assign`) attempted conflicting assignment to 'a': current=1, new=2
  ┌─ identities/identity_d2/identity_d2.prot:9:3
  │
9 │   DUT.a := a;
  │   ^^^^^^^^^^^ Thread 1 (`multiple_assign`) attempted conflicting assignment to 'a': current=1, new=2

Trace 0 failed: Thread(ConflictingAssignment { symbol_id: symbol1, symbol_name: "a", current_value: ValueOwned(00000000000000000000000000000010), new_value: ValueOwned(00000000000000000000000000000001), thread_idx: 0, transaction_name: "multiple_assign", stmt_id: stmt4 })
Trace 0 failed: Thread(ConflictingAssignment { symbol_id: symbol1, symbol_name: "a", current_value: ValueOwned(00000000000000000000000000000001), new_value: ValueOwned(00000000000000000000000000000010), thread_idx: 1, transaction_name: "multiple_assign", stmt_id: stmt1 })
Trace 0 execution failed.
